v0.23
 - Improved NLP engine: Added higher priority to those rules with current 'topic' 
 - Fixed bug #33

v0.22
 - Fixed several bugs in the score algorithm
 - Improved score algorithm by adding detection of user interference 
   in chatbot conversations. Also not scoring duplicated rules.
 - Fixed bug #32

v0.21
 - Added 'Dale Aceptar' link in welcome window
 - Fixed bug #31

v0.20
 - New welcome window
 - Updated 'Options' window tooltips
 - Updated status icons in the connection tab
 - Added encryption support to send scores to the server
 - Fixed bugs #28, #29, #30

v0.19
 - Added status icons in the connection tab
 - Added tooltip to the all-the-time-visible score
 - Updated several strings
 - Added the 'Options' window

v0.18
 - Updated Chatbot icon theme
 - Showing score all the time in the top-right corner of the window
 - Minor changes in all tabs like margins, strings, icons, sizes, etc.
 - Updated 'about' dialog
 - Fixed bugs #13, #26

v0.17
 - New icon theme
 - Added options to the 'add rule' button to add rules with templates for 
   variables and conditionals
 - New Score algorithm
 - New UI to display scores
 - Added 'upload score' button
 - Implemented conection with Graylog server
 - Logging stats for account verification and score in Graylog server
 - Fixed bugs #22, #24

v0.16
 - Added "score" stab. Implemented simple algorithm for scoring chatbots.
 - Logging new stats such as history lines, history lexicon size, rule points,
   among others
 - Fixed bug #20

v0.15
 - Logging simple stats: total words, total different words and connection
 - Updated some strings

v0.14
 - Integrated Freeling
 - Removing duplicated characters to improve matching.
 - Test chatbot tab: Moved between "Teach" and "Connect" tabs. Added options
   where user can enable/disable sentence lemmatization and other options.
 - History tab: Added filter and tool buttons to remove conversations, 
   find the definition of a rule with match and teach a new rule from a 