@@ -1,5 +1,7 @@
 v0.23
- - Improved NLP engine: Added higher priority to those rules with current 'topic' 
+ - Improved NLP engine: 
+    - Added higher priority to those rules that match the current 'topic' 
+    - Added support for literal strings
  - Fixed bug #33
 
 v0.22
